I made the first draft of the comments section
