# swagger.json
@@ -380,6 +380,98 @@
           }
         }
       }
+    },
+    
+    "/comments": {
+  "get": {
+    "tags": ["Comments"],
+    "description": "Get all comments",
+    "responses": {
+      "200": { "description": "OK" },
+      "500": { "description": "Internal Server Error" }
+    }
+  },
+  "post": {
+    "tags": ["Comments"],
+    "description": "Create a new comment",
+    "parameters": [
+      {
+        "name": "body",
+        "in": "body",
+        "required": true,
+        "schema": {
+          "type": "object",
+          "properties": {
+            "userId": { "example": "675a3bd91c4e45d3a8d2f116" },
+            "userName": { "example": "Daniel Rivera" },
+            "eventId": { "example": "6781f0b48e9c55a5b23c9310" },
+            "content": { "example": "Let me know if I can help with anything before the event." }
+          }
+        }
+      }
+    ],
+    "responses": {
+      "201": { "description": "Created" },
+      "400": { "description": "Bad Request" },
+      "500": { "description": "Internal Server Error" }
     }
   }
+},
+"/comments/{id}": {
+  "get": {
+    "tags": ["Comments"],
+    "description": "Get a single comment by ID",
+    "parameters": [
+      { "name": "id", "in": "path", "required": true, "type": "string" }
+    ],
+    "responses": {
+      "200": { "description": "OK" },
+      "404": { "description": "Not Found" },
+      "500": { "description": "Internal Server Error" }
+    }
+  },
+  "put": {
+    "tags": ["Comments"],
+    "description": "Update a comment by ID",
+    "parameters": [
+      { "name": "id", "in": "path", "required": true, "type": "string" },
+      {
+        "name": "body",
+        "in": "body",
+        "required": true,
+        "schema": {
+          "type": "object",
+          "properties": {
+            "userId": { "example": "675a3bd91c4e45d3a8d2f116" },
+            "userName": { "example": "Daniel Rivera" },
+            "eventId": { "example": "6781f0b48e9c55a5b23c9310" },
+            "content": { "example": "Updated comment content." }
+          }
+        }
+      }
+    ],
+    "responses": {
+      "200": { "description": "OK" },
+      "400": { "description": "Bad Request" },
+      "404": { "description": "Not Found" },
+      "500": { "description": "Internal Server Error" }
+    }
+  },
+  "delete": {
+    "tags": ["Comments"],
+    "description": "Delete a comment by ID",
+    "parameters": [
+      { "name": "id", "in": "path", "required": true, "type": "string" }
+    ],
+    "responses": {
+      "204": { "description": "No Content" },
+      "404": { "description": "Not Found" },
+      "500": { "description": "Internal Server Error" }
+    }
+  }
+}
+
+    
+  }
+  
 }
